# ishtar

./: .gitignore  Cargo.toml  README.md  suamae.txt  test.js  test.txt  text.txt
isht/: Cargo.toml
isht/examples/: keybinds.isht
isht/src/: lexer.rs  lib.rs  tasks.rs
isht/src/configuration/: errors.rs  mod.rs
isht/src/parsing/: errors.rs  mod.rs  statment.rs
src/: main.rs
src/helpers/: file_tree.rs  functions.rs  mod.rs  terminal_line.rs  types.rs  vec2.rs
src/ishtar/: configuration.rs  enums.rs  errors.rs  logger.rs  mod.rs  widget_manager.rs
src/ishtar/widgets/: clipboard.rs  command_interpreter.rs  file_manager.rs  highlighter.rs  keybind_handler.rs  mod.rs  popup.rs  text_area.rs  writeable_area.rs
tmp/: log.txt
